# nordigen-cli

./: .gitignore  Cargo.toml  README.md  nordigen.cfg.example
src/: cli.rs  main.rs  nordigen.rs
src/nordigen/: auth_http_cb.rs  authorize.rs  banks.rs  config.rs  state.rs
