[package]
name = "nordigen-cli"
description = "Interact with Nordigen's open banking API"
authors = ["Joao Eduardo Luis <joao@abysmo.io>"]
version = "0.1.0"
license = "AGPL-3"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/jecluis/nordigen-cli"
keywords = ["open-banking", "nordigen", "cli", "command-line"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.25"
nordigen = { git = "https://github.com/jecluis/ob-nordigen-rs", version = "0.1.0" }
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive", "serde_derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
toml = "0.5.10"
